--- a/samples/Firebase/Functions/FunctionsSample/Info.plist
+++ b/samples/Firebase/Functions/FunctionsSample/Info.plist
@@ -3,9 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>CFBundleName</key>
-	<string>FunctionsSample</string>
+	<string>CloudFunctionsSample</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.xamarin.firebase.ios.functionssample</string>
+	<string>com.xamarin.firebase.ios.cloudfunctionssample</string>
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
