[Firebase][Core] Updated to version 6.10.4 (a.k.a 6.34.0)

--- a/source/Firebase/Core/Core.csproj
+++ b/source/Firebase/Core/Core.csproj
@@ -6,7 +6,7 @@
     <RootNamespace>Firebase.Core</RootNamespace>
     <AssemblyName>Firebase.Core</AssemblyName>
     <AssemblyVersion>1.0.0.0</AssemblyVersion>
-    <FileVersion>6.6.6</FileVersion>
+    <FileVersion>6.10.4</FileVersion>
     <IPhoneResourcePrefix>Resources</IPhoneResourcePrefix>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
@@ -23,7 +23,7 @@
     <PackageProjectUrl>https://go.microsoft.com/fwlink/?linkid=2007321</PackageProjectUrl>
     <PackageLicenseFile>License.md</PackageLicenseFile>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
-    <PackageVersion>6.6.6</PackageVersion>
+    <PackageVersion>6.10.4</PackageVersion>
   </PropertyGroup>
 
   <ItemGroup>
@@ -41,32 +41,17 @@
     <None Include="..\..\..\externals\FirebaseCoreDiagnostics.framework\FirebaseCoreDiagnostics">
       <Link>FirebaseCoreDiagnostics.framework</Link>
     </None>
-    <None Include="..\..\..\externals\GoogleAPIClientForREST.framework\GoogleAPIClientForREST">
-      <Link>GoogleAPIClientForREST.framework</Link>
-    </None>
     <None Include="..\..\..\externals\GoogleDataTransport.framework\GoogleDataTransport">
       <Link>GoogleDataTransport.framework</Link>
-    </None>
-    <None Include="..\..\..\externals\GoogleDataTransportCCTSupport.framework\GoogleDataTransportCCTSupport">
-      <Link>GoogleDataTransportCCTSupport.framework</Link>
-    </None>
-    <None Include="..\..\..\externals\GoogleToolboxForMac.framework\GoogleToolboxForMac">
-      <Link>GoogleToolboxForMac.framework</Link>
+    </None>    
+    <None Include="..\..\..\externals\FBLPromises.framework\FBLPromises">
+      <Link>FBLPromises.framework</Link>
     </None>
     <None Include="..\..\..\externals\GoogleUtilities.framework\GoogleUtilities">
       <Link>GoogleUtilities.framework</Link>
     </None>
-    <None Include="..\..\..\externals\GTMSessionFetcher.framework\GTMSessionFetcher">
-      <Link>GTMSessionFetcher.framework</Link>
-    </None>
-    <None Include="..\..\..\externals\leveldb.framework\leveldb">
-      <Link>leveldb.framework</Link>
-    </None>
     <None Include="..\..\..\externals\nanopb.framework\nanopb">
       <Link>nanopb.framework</Link>
-    </None>
-    <None Include="..\..\..\externals\protobuf.framework\protobuf">
-      <Link>protobuf.framework</Link>
     </None>
     <None Include="Core.targets" Pack="True" PackagePath="build/Xamarin.Firebase.iOS.Core.targets" />
     <None Include="Core.targets" Pack="True" PackagePath="buildTransitive/Xamarin.Firebase.iOS.Core.targets" />
@@ -88,30 +73,16 @@
       <ForceLoad>True</ForceLoad>
       <Frameworks>Foundation</Frameworks>
     </NativeReference>
-    <NativeReference Include="..\..\..\externals\GoogleAPIClientForREST.framework">
-      <Kind>Framework</Kind>
-      <SmartLink>True</SmartLink>
-      <ForceLoad>True</ForceLoad>
-    </NativeReference>
     <NativeReference Include="..\..\..\externals\GoogleDataTransport.framework">
       <Kind>Framework</Kind>
       <SmartLink>True</SmartLink>
       <ForceLoad>True</ForceLoad>
       <Frameworks>SystemConfiguration CoreTelephony</Frameworks>
-    </NativeReference>
-    <NativeReference Include="..\..\..\externals\GoogleDataTransportCCTSupport.framework">
+    </NativeReference>  
+    <NativeReference Include="..\..\..\externals\FBLPromises.framework">
       <Kind>Framework</Kind>
       <SmartLink>True</SmartLink>
       <ForceLoad>True</ForceLoad>
-      <LinkerFlags>-lz</LinkerFlags>
-      <Frameworks>SystemConfiguration CoreTelephony</Frameworks>
-    </NativeReference>
-    <NativeReference Include="..\..\..\externals\GoogleToolboxForMac.framework">
-      <Kind>Framework</Kind>
-      <SmartLink>True</SmartLink>
-      <ForceLoad>True</ForceLoad>
-      <LinkerFlags>-lz</LinkerFlags>
-      <Frameworks>SystemConfiguration</Frameworks>
     </NativeReference>
     <NativeReference Include="..\..\..\externals\GoogleUtilities.framework">
       <Kind>Framework</Kind>
@@ -120,23 +91,7 @@
       <LinkerFlags>-ObjC -lz</LinkerFlags>
       <Frameworks>Security SystemConfiguration</Frameworks>
     </NativeReference>
-    <NativeReference Include="..\..\..\externals\GTMSessionFetcher.framework">
-      <Kind>Framework</Kind>
-      <Frameworks>Security</Frameworks>
-      <SmartLink>True</SmartLink>
-      <ForceLoad>True</ForceLoad>
-    </NativeReference>
-    <NativeReference Include="..\..\..\externals\leveldb.framework">
-      <Kind>Framework</Kind>
-      <SmartLink>True</SmartLink>
-      <ForceLoad>True</ForceLoad>
-    </NativeReference>
     <NativeReference Include="..\..\..\externals\nanopb.framework">
-      <Kind>Framework</Kind>
-      <SmartLink>True</SmartLink>
-      <ForceLoad>True</ForceLoad>
-    </NativeReference>
-    <NativeReference Include="..\..\..\externals\protobuf.framework">
       <Kind>Framework</Kind>
       <SmartLink>True</SmartLink>
       <ForceLoad>True</ForceLoad>
