--- a/cgmanifest.json
+++ b/cgmanifest.json
@@ -445,8 +445,18 @@
 				"type": "other",
 				"other": {
 					"name": "Google-Mobile-Ads-SDK",
-					"version": "7.57.0",
-					"downloadUrl": "https://dl.google.com/dl/cpdc/07dfd0b0ab9f9d12/Google-Mobile-Ads-SDK-7.57.0.tar.gz"
+					"version": "7.66.0",
+					"downloadUrl": "https://dl.google.com/dl/cpdc/080245260b12ad1b/Google-Mobile-Ads-SDK-7.66.0.tar.gz"
+				}
+			}
+		},
+		{
+			"component": {
+				"type": "other",
+				"other": {
+					"name": "GoogleUserMessagingPlatform",
+					"version": "1.1.0",
+					"downloadUrl": "https://dl.google.com/dl/cpdc/624b551688fd020a/GoogleUserMessagingPlatform-1.1.0.tar.gz"
 				}
 			}
 		},
