--- a/source/Google/MobileAds/MobileAds.targets
+++ b/source/Google/MobileAds/MobileAds.targets
@@ -2,27 +2,25 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 	<PropertyGroup>
 		<_GoogleMobileAdsAssemblyName>Google.MobileAds, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</_GoogleMobileAdsAssemblyName>
-		<_GoogleMobileAdsId>FAdM-7.57.0</_GoogleMobileAdsId>
-		<_GoogleMobileAdsConsentId>GCnsnt-1.0.5</_GoogleMobileAdsConsentId>
-		<_GoogleMobileAdsSDKBaseFolder>$(XamarinBuildDownloadDir)$(_GoogleMobileAdsId)\Frameworks\GoogleMobileAdsFramework-Current\</_GoogleMobileAdsSDKBaseFolder>
-		<_GoogleMobileAdsConsentSDKBaseFolder>$(XamarinBuildDownloadDir)$(_GoogleMobileAdsConsentId)\googleads-consent-sdk-ios-1.0.5\PersonalizedAdConsent\PersonalizedAdConsent\</_GoogleMobileAdsConsentSDKBaseFolder>
-		<_GoogleMobileAdsCopyConsentFormMasterBeforeTargets>_CodesignNativeLibraries</_GoogleMobileAdsCopyConsentFormMasterBeforeTargets>
-		<_GoogleMobileAdsCopyConsentFormMasterDependsOnTargets>_GoogleMobileAdsCopyConsentForm</_GoogleMobileAdsCopyConsentFormMasterDependsOnTargets>
+		<_GoogleMobileAdsId>FAdM-7.66.0</_GoogleMobileAdsId>
+		<_GoogleUserMessagingPlatformId>GUsrMess-1.1.0</_GoogleUserMessagingPlatformId>
+		<_GoogleMobileAdsSDKBaseFolder>$(XamarinBuildDownloadDir)$(_GoogleMobileAdsId)\Frameworks\GoogleMobileAdsFramework-Current\</_GoogleMobileAdsSDKBaseFolder>		
+		<_GoogleUserMessagingPlatformSDKBaseFolder>$(XamarinBuildDownloadDir)$(_GoogleUserMessagingPlatformId)\Frameworks\Release\</_GoogleUserMessagingPlatformSDKBaseFolder>		
 	</PropertyGroup>
 	<ItemGroup Condition="('$(OutputType)'!='Library' OR '$(IsAppExtension)'=='True')">
 		<XamarinBuildDownload Include="$(_GoogleMobileAdsId)">
-			<Url>https://dl.google.com/dl/cpdc/07dfd0b0ab9f9d12/Google-Mobile-Ads-SDK-7.57.0.tar.gz</Url>
+			<Url>https://dl.google.com/dl/cpdc/080245260b12ad1b/Google-Mobile-Ads-SDK-7.66.0.tar.gz</Url>
 			<Kind>Tgz</Kind>
-		</XamarinBuildDownload>
-		<XamarinBuildDownload Include="$(_GoogleMobileAdsConsentId)">
-			<Url>https://github.com/googleads/googleads-consent-sdk-ios/archive/v1.0.5.zip</Url>
-			<Kind>Zip</Kind>
+		</XamarinBuildDownload>		
+		<XamarinBuildDownload Include="$(_GoogleUserMessagingPlatformId)">
+			<Url>https://dl.google.com/dl/cpdc/624b551688fd020a/GoogleUserMessagingPlatform-1.1.0.tar.gz</Url>
+			<Kind>Tgz</Kind>
 		</XamarinBuildDownload>
 		<XamarinBuildRestoreResources Include="_FAdMDownloadedItems" />
 	</ItemGroup>
 	<Target Name="_FAdMDownloadedItems">
 		<ItemGroup>
-			<!-- From https://dl.google.com/dl/cpdc/07dfd0b0ab9f9d12/Google-Mobile-Ads-SDK-7.57.0.tar.gz -->
+			<!-- From https://dl.google.com/dl/cpdc/080245260b12ad1b/Google-Mobile-Ads-SDK-7.66.0.tar.gz -->
 			<NativeReference Include="$(_GoogleMobileAdsSDKBaseFolder)GoogleMobileAds.framework">
 				<Kind>Framework</Kind>
 				<SmartLink>True</SmartLink>
@@ -31,24 +29,12 @@
 				<Frameworks>AudioToolbox AVFoundation CFNetwork CoreGraphics CoreMedia CoreTelephony CoreVideo MediaPlayer MessageUI MobileCoreServices QuartzCore Security StoreKit SystemConfiguration</Frameworks>
 				<WeakFrameworks>AdSupport JavaScriptCore SafariServices WebKit</WeakFrameworks>
 			</NativeReference>
+			<!-- From https://dl.google.com/dl/cpdc/624b551688fd020a/GoogleUserMessagingPlatform-1.1.0.tar.gz -->
+			<NativeReference Include="$(_GoogleUserMessagingPlatformSDKBaseFolder)UserMessagingPlatform.framework">
+				<Kind>Framework</Kind>
+				<SmartLink>True</SmartLink>
+				<ForceLoad>True</ForceLoad>
+			</NativeReference>
 		</ItemGroup>
-	</Target>
-	<Target Name="_GoogleMobileAdsCopyConsentFormMasterTargets"
-		Condition="'$(_GoogleMobileAdsCopyConsentFormMasterDependsOnTargets)'!=''"
-		BeforeTargets="$(_GoogleMobileAdsCopyConsentFormMasterBeforeTargets)"
-		DependsOnTargets="$(_GoogleMobileAdsCopyConsentFormMasterDependsOnTargets)" />
-	<Target Name="_GoogleMobileAdsCopyConsentForm">
-		<ItemGroup>
-			<GoogleMobileAdsCopyResources Include="$(_GoogleMobileAdsConsentSDKBaseFolder)PersonalizedAdConsent.bundle\consentform.html">
-				<TargetPath>$(AppBundleDir)\Frameworks\PersonalizedAdConsent.framework\PersonalizedAdConsent.bundle\consentform.html</TargetPath>
-			</GoogleMobileAdsCopyResources>
-		</ItemGroup>
-
-		<Copy Condition="'$(OS)'=='Unix'"
-		      SourceFiles="@(GoogleMobileAdsCopyResources)"
-		      DestinationFolder="$(AppBundleDir)\Frameworks\PersonalizedAdConsent.framework\PersonalizedAdConsent.bundle" />
-		<CopyFilesToBuildServer SessionId="$(BuildSessionId)"
-					Condition="'$(IsMacEnabled)'=='true' AND '$(OS)'!='Unix'"
-					Files="@(GoogleMobileAdsCopyResources)" />
 	</Target>
 </Project>
