--- a/source/Firebase/PerformanceMonitoring/PerformanceMonitoring.csproj
+++ b/source/Firebase/PerformanceMonitoring/PerformanceMonitoring.csproj
@@ -6,7 +6,7 @@
     <RootNamespace>Firebase.PerformanceMonitoring</RootNamespace>
     <AssemblyName>Firebase.PerformanceMonitoring</AssemblyName>
     <AssemblyVersion>1.0.0.0</AssemblyVersion>
-    <FileVersion>3.1.11</FileVersion>
+    <FileVersion>3.3.0</FileVersion>
     <IPhoneResourcePrefix>Resources</IPhoneResourcePrefix>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
@@ -23,7 +23,7 @@
     <PackageProjectUrl>https://go.microsoft.com/fwlink/?linkid=866312</PackageProjectUrl>
     <PackageLicenseFile>License.md</PackageLicenseFile>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
-    <PackageVersion>3.1.11</PackageVersion>
+    <PackageVersion>3.3.0</PackageVersion>
   </PropertyGroup>
 
   <ItemGroup>
@@ -35,10 +35,30 @@
   </ItemGroup>
   
   <ItemGroup>
+    <None Include="..\..\..\externals\GTMSessionFetcher.framework\GTMSessionFetcher">
+      <Link>GTMSessionFetcher.framework</Link>
+    </None>
+    <None Include="..\..\..\externals\protobuf.framework\protobuf">
+      <Link>protobuf.framework</Link>
+    </None>
     <None Include="PerformanceMonitoring.targets" Pack="True" PackagePath="build/Xamarin.Firebase.iOS.PerformanceMonitoring.targets" />
     <None Include="PerformanceMonitoring.targets" Pack="True" PackagePath="buildTransitive/Xamarin.Firebase.iOS.PerformanceMonitoring.targets" />
     <None Include="License.md" Pack="True" PackagePath="License.md" />
     <None Include="../../../icons/firebaseiosperformancemonitoring_128x128.png" Pack="True" PackagePath="firebaseiosperformancemonitoring_128x128.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <NativeReference Include="..\..\..\externals\GTMSessionFetcher.framework">
+      <Kind>Framework</Kind>
+      <Frameworks>Security</Frameworks>
+      <SmartLink>True</SmartLink>
+      <ForceLoad>True</ForceLoad>
+    </NativeReference>
+    <NativeReference Include="..\..\..\externals\protobuf.framework">
+      <Kind>Framework</Kind>
+      <SmartLink>True</SmartLink>
+      <ForceLoad>True</ForceLoad>
+    </NativeReference>
   </ItemGroup>
 
   <ItemGroup>
