--- a/source/Firebase/PerformanceMonitoring/PerformanceMonitoring.targets
+++ b/source/Firebase/PerformanceMonitoring/PerformanceMonitoring.targets
@@ -2,19 +2,19 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 	<PropertyGroup>
 		<_FirebasePerformanceMonitoringAssemblyName>Firebase.PerformanceMonitoring, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</_FirebasePerformanceMonitoringAssemblyName>
-		<_FirebasePerformanceMonitoringItemsFolder>FPrfrmncM-3.1.11</_FirebasePerformanceMonitoringItemsFolder>
-		<_FirebasePerformanceMonitoringSDKBaseFolder>$(XamarinBuildDownloadDir)$(_FirebasePerformanceMonitoringItemsFolder)\Frameworks\</_FirebasePerformanceMonitoringSDKBaseFolder>
+		<_FirebasePerformanceMonitoringItemsFolder>FPrfrmncM-3.3.0</_FirebasePerformanceMonitoringItemsFolder>
+		<_FirebasePerformanceMonitoringSDKBaseFolder>$(XamarinBuildDownloadDir)$(_FirebasePerformanceMonitoringItemsFolder)\FirebasePerformance-3.3.0\Frameworks\</_FirebasePerformanceMonitoringSDKBaseFolder>
 	</PropertyGroup>
 	<ItemGroup Condition="('$(OutputType)'!='Library' OR '$(IsAppExtension)'=='True')">
 		<XamarinBuildDownload Include="$(_FirebasePerformanceMonitoringItemsFolder)">
-			<Url>https://dl.google.com/dl/cpdc/c543c7b170639336/FirebasePerformance-3.1.11.tar.gz</Url>
+			<Url>https://dl.google.com/dl/cpdc/ec10178ac6b36ea6/FirebasePerformance-3.3.0.tar.gz</Url>
 			<Kind>Tgz</Kind>
 		</XamarinBuildDownload>
 		<XamarinBuildRestoreResources Include="_FPrfrmncMDownloadedItems" />
 	</ItemGroup>
 	<Target Name="_FPrfrmncMDownloadedItems">
 		<ItemGroup>
-			<!-- From https://dl.google.com/dl/cpdc/c543c7b170639336/FirebasePerformance-3.1.11.tar.gz -->
+			<!-- From https://dl.google.com/dl/cpdc/ec10178ac6b36ea6/FirebasePerformance-3.3.0.tar.gz -->
 			<NativeReference Include="$(_FirebasePerformanceMonitoringSDKBaseFolder)FirebasePerformance.framework">
 				<Kind>Framework</Kind>
 				<SmartLink>True</SmartLink>
