--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,3 +30,6 @@ jobs:
     - template: sign-artifacts/jobs/v1.yml@internal-templates
       parameters:
         dependsOn: [ 'build' ]
+        signTags: true
+        signMain: true
+        realSign: true
