--- a/cgmanifest.json
+++ b/cgmanifest.json
@@ -14,7 +14,7 @@
 				"Type": "Pod",
 				"Pod": {
 					"Name": "AppAuth",
-					"Version": "1.3.0"
+					"Version": "1.4.0"
 				}
 			}
 		},
@@ -32,7 +32,7 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "FirebaseABTesting",
-					"Version": "4.2.0"
+					"Version": "7.10.0"
 				}
 			}
 		},
@@ -41,7 +41,7 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "FirebaseAnalytics",
-					"Version": "6.9.0"
+					"Version": "7.10.0"
 				}
 			}
 		},
@@ -50,7 +50,7 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "FirebaseAuth",
-					"Version": "6.9.2"
+					"Version": "7.10.0"
 				}
 			}
 		},
@@ -59,7 +59,7 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "FirebaseCore",
-					"Version": "6.10.4"
+					"Version": "7.10.0"
 				}
 			}
 		},
@@ -68,7 +68,7 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "FirebaseCoreDiagnostics",
-					"Version": "1.6.0"
+					"Version": "7.10.0"
 				}
 			}
 		},
@@ -77,7 +77,7 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "FirebaseCrashlytics",
-					"Version": "4.6.2"
+					"Version": "7.10.0"
 				}
 			}
 		},
@@ -86,7 +86,7 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "FirebaseDatabase",
-					"Version": "6.6.0"
+					"Version": "7.10.0"
 				}
 			}
 		},
@@ -95,7 +95,7 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "FirebaseDynamicLinks",
-					"Version": "4.3.1"
+					"Version": "7.10.0"
 				}
 			}
 		},
@@ -104,7 +104,7 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "FirebaseFirestore",
-					"Version": "1.19.0"
+					"Version": "7.10.0"
 				}
 			}
 		},
@@ -113,7 +113,7 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "FirebaseFunctions",
-					"Version": "2.9.0"
+					"Version": "7.10.0"
 				}
 			}
 		},
@@ -122,7 +122,7 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "FirebaseInAppMessaging",
-					"Version": "0.24.0"
+					"Version": "7.10.0-beta"
 				}
 			}
 		},
@@ -131,7 +131,7 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "FirebaseInstallations",
-					"Version": "1.7.0"
+					"Version": "7.10.0"
 				}
 			}
 		},
@@ -140,7 +140,7 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "FirebaseInstanceID",
-					"Version": "4.8.0"
+					"Version": "7.10.0"
 				}
 			}
 		},
@@ -149,124 +149,7 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "FirebaseMessaging",
-					"Version": "4.7.1"
-				}
-			}
-		},
-		{
-			"component": {
-				"type": "Pod",
-				"Pod": {
-					"name": "FirebaseMLCommon",
-					"Version": "0.21.0"
-				}
-			}
-		},
-		{
-			"component": {
-				"type": "Pod",
-				"Pod": {
-					"name": "FirebaseMLModelInterpreter",
-					"Version": "0.21.0"
-				}
-			}
-		},
-		{
-			"component": {
-				"type": "Pod",
-				"Pod": {
-					"name": "FirebaseMLNaturalLanguage",
-					"Version": "0.18.0"
-				}
-			}
-		},
-		{
-			"component": {
-				"type": "Pod",
-				"Pod": {
-					"name": "FirebaseMLNLLanguageID",
-					"Version": "0.18.0"
-				}
-			}
-		},
-		{
-			"component": {
-				"type": "Pod",
-				"Pod": {
-					"name": "FirebaseMLNLSmartReply",
-					"Version": "0.18.0"
-				}
-			}
-		},
-		{
-			"component": {
-				"type": "Pod",
-				"Pod": {
-					"name": "FirebaseMLNLTranslate",
-					"Version": "0.19.0"
-				}
-			}
-		},
-		{
-			"component": {
-				"type": "Pod",
-				"Pod": {
-					"name": "FirebaseMLVision",
-					"Version": "0.21.0"
-				}
-			}
-		},
-		{
-			"component": {
-				"type": "Pod",
-				"Pod": {
-					"name": "FirebaseMLVisionAutoML",
-					"Version": "0.21.0"
-				}
-			}
-		},
-		{
-			"component": {
-				"type": "Pod",
-				"Pod": {
-					"name": "FirebaseMLVisionBarcodeModel",
-					"Version": "0.21.0"
-				}
-			}
-		},
-		{
-			"component": {
-				"type": "Pod",
-				"Pod": {
-					"name": "FirebaseMLVisionFaceModel",
-					"Version": "0.21.0"
-				}
-			}
-		},
-		{
-			"component": {
-				"type": "Pod",
-				"Pod": {
-					"name": "FirebaseMLVisionLabelModel",
-					"Version": "0.21.0"
-				}
-			}
-		},
-		{
-			"component": {
-				"type": "Pod",
-				"Pod": {
-					"name": "FirebaseMLVisionObjectDetection",
-					"Version": "0.21.0"
-				}
-			}
-		},
-		{
-			"component": {
-				"type": "Pod",
-				"Pod": {
-					"name": "FirebaseMLVisionTextModel",
-					"Version": "0.21.0"
+					"Version": "7.10.0"
 				}
 			}
 		},
@@ -275,7 +158,7 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "FirebasePerformance",
-					"Version": "3.3.0"
+					"Version": "7.10.0"
 				}
 			}
 		},
@@ -284,7 +167,7 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "FirebaseRemoteConfig",
-					"Version": "4.9.1"
+					"Version": "7.10.0"
 				}
 			}
 		},
@@ -293,7 +176,34 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "FirebaseStorage",
-					"Version": "3.9.1"
+					"Version": "7.10.0"
+				}
+			}
+		},
+		{
+			"component": {
+				"type": "Pod",
+				"Pod": {
+					"name": "FirebaseAppDistribution",
+					"Version": "7.10.0-beta"
+				}
+			}
+		},
+		{
+			"component": {
+				"type": "Pod",
+				"Pod": {
+					"name": "GoogleAPIClientForREST",
+					"Version": "1.5.2"
+				}
+			}
+		},
+		{
+			"component": {
+				"type": "Pod",
+				"Pod": {
+					"name": "GoogleAppMeasurement",
+					"Version": "7.10.0"
 				}
 			}
 		},
@@ -310,35 +220,8 @@
 			"component": {
 				"type": "Pod",
 				"Pod": {
-					"name": "GoogleAPIClientForREST",
-					"Version": "1.4.3"
-				}
-			}
-		},
-		{
-			"component": {
-				"type": "Pod",
-				"Pod": {
-					"name": "GoogleAppIndexing",
-					"Version": "2.0.3"
-				}
-			}
-		},
-		{
-			"component": {
-				"type": "Pod",
-				"Pod": {
-					"name": "GoogleAppMeasurement",
-					"Version": "6.9.0"
-				}
-			}
-		},
-		{
-			"component": {
-				"type": "Pod",
-				"Pod": {
 					"name": "google-cast-sdk",
-					"Version": "4.4.6"
+					"Version": "4.5.3"
 				}
 			}
 		},
@@ -347,19 +230,10 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "GoogleDataTransport",
-					"Version": "7.5.1"
+					"Version": "8.4.0"
 				}
 			}
-		},
-		{
-			"component": {
-				"type": "Pod",
-				"Pod": {
-					"name": "GGLInstanceID",
-					"Version": "1.2.1"
-				}
-			}
-		},
+		},		
 		{
 			"component": {
 				"type": "Pod",
@@ -374,7 +248,7 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "GoogleMaps",
-					"Version": "3.9.0"
+					"Version": "4.2.0"
 				}
 			}
 		},
@@ -383,7 +257,7 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "Google-Mobile-Ads-SDK",
-					"Version": "7.66.0"
+					"Version": "8.3.0"
 				}
 			}
 		},
@@ -392,7 +266,7 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "GooglePlaces",
-					"Version": "3.9.0"
+					"Version": "4.2.0"
 				}
 			}
 		},
@@ -410,7 +284,7 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "GoogleTagManager",
-					"Version": "7.1.2"
+					"Version": "7.2.0"
 				}
 			}
 		},
@@ -419,7 +293,7 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "GoogleToolboxForMac",
-					"Version": "2.2.2"
+					"Version": "2.3.1"
 				}
 			}
 		},
@@ -437,7 +311,7 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "GoogleUtilities",
-					"Version": "6.7.2"
+					"Version": "7.3.1"
 				}
 			}
 		},
@@ -464,7 +338,7 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "GTMAppAuth",
-					"Version": "1.0.0"
+					"Version": "1.2.1"
 				}
 			}
 		},
@@ -473,7 +347,7 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "GTMSessionFetcher",
-					"Version": "1.4.0"
+					"Version": "1.5.0"
 				}
 			}
 		},
@@ -482,7 +356,7 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "leveldb-library",
-					"Version": "1.22.0"
+					"Version": "1.22.1"
 				}
 			}
 		},
@@ -491,7 +365,7 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "nanopb",
-					"Version": "1.30906.0"
+					"Version": "2.30908.0"
 				}
 			}
 		},
@@ -500,7 +374,7 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "PromisesObjC",
-					"Version": "1.2.10"
+					"Version": "1.2.12"
 				}
 			}
 		},
@@ -509,7 +383,7 @@
 				"type": "Pod",
 				"Pod": {
 					"name": "Protobuf",
-					"Version": "3.13.0"
+					"Version": "3.15.8"
 				}
 			}
 		},
@@ -519,24 +393,6 @@
 				"Pod": {
 					"name": "TensorFlowLiteC",
 					"Version": "2.3.0"
-				}
-			}
-		},
-		{
-			"component": {
-				"type": "Pod",
-				"Pod": {
-					"name": "TensorFlowLiteObjC",
-					"Version": "2.3.0"
-				}
-			}
-		},
-		{
-			"component": {
-				"type": "Pod",
-				"Pod": {
-					"name": "Google",
-					"Version": "3.1.0"
 				}
 			}
 		}
