--- a/source/Firebase/Core/Core.targets
+++ b/source/Firebase/Core/Core.targets
@@ -3,21 +3,21 @@
 
 	<PropertyGroup>
 		<_FirebaseCoreAssemblyName>Firebase.Core, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</_FirebaseCoreAssemblyName>
-		<_GoogleAppMeasurementItemsFolder>GAppM-6.9.0</_GoogleAppMeasurementItemsFolder>
-		<_GoogleAppMeasurementSDKBaseFolder>$(XamarinBuildDownloadDir)$(_GoogleAppMeasurementItemsFolder)\Frameworks\</_GoogleAppMeasurementSDKBaseFolder>
+		<_GoogleAppMeasurementItemsFolder>GAppM-7.9.0</_GoogleAppMeasurementItemsFolder>
+		<_GoogleAppMeasurementSDKBaseFolder>$(XamarinBuildDownloadDir)$(_GoogleAppMeasurementItemsFolder)\GoogleAppMeasurement-7.9.0\Frameworks\</_GoogleAppMeasurementSDKBaseFolder>
 	</PropertyGroup>
 
 	<ItemGroup Condition="('$(OutputType)'!='Library' OR '$(IsAppExtension)'=='True')">
 		<XamarinBuildDownload Include="$(_GoogleAppMeasurementItemsFolder)">
-			<Url>https://dl.google.com/firebase/ios/analytics/002e6bbf37cc906f/GoogleAppMeasurement-6.9.0.tar.gz</Url>
+			<Url>https://dl.google.com/firebase/ios/analytics/dd4bf2e43d43af9f/GoogleAppMeasurement-7.9.0.tar.gz</Url>
 			<Kind>Tgz</Kind>
 		</XamarinBuildDownload>
 		<XamarinBuildRestoreResources Include="_FCrDownloadedItems" />
 	</ItemGroup>
 	<Target Name="_FCrDownloadedItems">
 		<ItemGroup>
-			<!-- From https://dl.google.com/firebase/ios/analytics/002e6bbf37cc906f/GoogleAppMeasurement-6.9.0.tar.gz -->
-			<NativeReference Include="$(_GoogleAppMeasurementSDKBaseFolder)GoogleAppMeasurement.framework">
+			<!-- From https://dl.google.com/firebase/ios/analytics/dd4bf2e43d43af9f/GoogleAppMeasurement-7.9.0.tar.gz -->
+			<NativeReference Include="$(_GoogleAppMeasurementSDKBaseFolder)GoogleAppMeasurement.xcframework">
 				<Kind>Framework</Kind>
 				<SmartLink>True</SmartLink>
 				<ForceLoad>True</ForceLoad>
