--- a/source/Firebase/Analytics/Analytics.targets
+++ b/source/Firebase/Analytics/Analytics.targets
@@ -3,31 +3,26 @@
 
 	<PropertyGroup>
 		<_FirebaseAnalyticsAssemblyName>Firebase.Analytics, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</_FirebaseAnalyticsAssemblyName>
-		<_FirebaseAnalyticsItemsFolder>FAnlytcs-6.9.0</_FirebaseAnalyticsItemsFolder>
-		<_FirebaseAnalyticsSDKBaseFolder>$(XamarinBuildDownloadDir)$(_FirebaseAnalyticsItemsFolder)\Frameworks\</_FirebaseAnalyticsSDKBaseFolder>
+		<_FirebaseAnalyticsItemsFolder>FAnlytcs-7.9.0</_FirebaseAnalyticsItemsFolder>
+		<_FirebaseAnalyticsSDKBaseFolder>$(XamarinBuildDownloadDir)$(_FirebaseAnalyticsItemsFolder)\FirebaseAnalytics-7.9.0\Frameworks\</_FirebaseAnalyticsSDKBaseFolder>
 	</PropertyGroup>
 
 	<ItemGroup Condition="('$(OutputType)'!='Library' OR '$(IsAppExtension)'=='True')">
 		<XamarinBuildDownload Include="$(_FirebaseAnalyticsItemsFolder)">
-			<Url>https://dl.google.com/firebase/ios/analytics/560b7928a9322b07/FirebaseAnalytics-6.9.0.tar.gz</Url>
+			<Url>https://dl.google.com/firebase/ios/analytics/c224fb8e370c1cfd/FirebaseAnalytics-7.9.0.tar.gz</Url>
 			<Kind>Tgz</Kind>
 		</XamarinBuildDownload>
 		<XamarinBuildRestoreResources Include="_FAnlytcsDownloadedItems" />
 	</ItemGroup>
 	<Target Name="_FAnlytcsDownloadedItems">
 		<ItemGroup>
-			<!-- From https://dl.google.com/firebase/ios/analytics/560b7928a9322b07/FirebaseAnalytics-6.9.0.tar.gz -->
-			<NativeReference Include="$(_FirebaseAnalyticsSDKBaseFolder)FirebaseAnalytics.framework">
+			<!-- From https://dl.google.com/firebase/ios/analytics/c224fb8e370c1cfd/FirebaseAnalytics-7.9.0.tar.gz -->
+			<NativeReference Include="$(_FirebaseAnalyticsSDKBaseFolder)FirebaseAnalytics.xcframework">
 				<Kind>Framework</Kind>
 				<SmartLink>True</SmartLink>
 				<ForceLoad>True</ForceLoad>
 				<LinkerFlags>-ObjC -lc++ -lsqlite3 -lz</LinkerFlags>
 				<Frameworks>AddressBook AdSupport CoreGraphics StoreKit SystemConfiguration</Frameworks>
-			</NativeReference>
-			<NativeReference Include="$(_FirebaseAnalyticsSDKBaseFolder)FIRAnalyticsConnector.framework">
-				<Kind>Framework</Kind>
-				<SmartLink>True</SmartLink>
-				<ForceLoad>True</ForceLoad>
 			</NativeReference>
 		</ItemGroup>
 	</Target>
