--- a/source/Google/MobileAds/MobileAds.targets
+++ b/source/Google/MobileAds/MobileAds.targets
@@ -2,14 +2,14 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 	<PropertyGroup>
 		<_GoogleMobileAdsAssemblyName>Google.MobileAds, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</_GoogleMobileAdsAssemblyName>
-		<_GoogleMobileAdsId>FAdM-7.66.0</_GoogleMobileAdsId>
+		<_GoogleMobileAdsId>FAdM-8.3.0</_GoogleMobileAdsId>
 		<_GoogleUserMessagingPlatformId>GUsrMess-1.1.0</_GoogleUserMessagingPlatformId>
 		<_GoogleMobileAdsSDKBaseFolder>$(XamarinBuildDownloadDir)$(_GoogleMobileAdsId)\Frameworks\GoogleMobileAdsFramework-Current\</_GoogleMobileAdsSDKBaseFolder>		
 		<_GoogleUserMessagingPlatformSDKBaseFolder>$(XamarinBuildDownloadDir)$(_GoogleUserMessagingPlatformId)\Frameworks\Release\</_GoogleUserMessagingPlatformSDKBaseFolder>		
 	</PropertyGroup>
 	<ItemGroup Condition="('$(OutputType)'!='Library' OR '$(IsAppExtension)'=='True')">
 		<XamarinBuildDownload Include="$(_GoogleMobileAdsId)">
-			<Url>https://dl.google.com/dl/cpdc/080245260b12ad1b/Google-Mobile-Ads-SDK-7.66.0.tar.gz</Url>
+			<Url>https://dl.google.com/dl/cpdc/ca562b743e0869b0/Google-Mobile-Ads-SDK-8.3.0.tar.gz</Url>
 			<Kind>Tgz</Kind>
 		</XamarinBuildDownload>		
 		<XamarinBuildDownload Include="$(_GoogleUserMessagingPlatformId)">
@@ -20,8 +20,8 @@
 	</ItemGroup>
 	<Target Name="_FAdMDownloadedItems">
 		<ItemGroup>
-			<!-- From https://dl.google.com/dl/cpdc/080245260b12ad1b/Google-Mobile-Ads-SDK-7.66.0.tar.gz -->
-			<NativeReference Include="$(_GoogleMobileAdsSDKBaseFolder)GoogleMobileAds.framework">
+			<!-- From https://dl.google.com/dl/cpdc/ca562b743e0869b0/Google-Mobile-Ads-SDK-8.3.0.tar.gz -->
+			<NativeReference Include="$(_GoogleMobileAdsSDKBaseFolder)GoogleMobileAds.xcframework">
 				<Kind>Framework</Kind>
 				<SmartLink>True</SmartLink>
 				<ForceLoad>True</ForceLoad>
